--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-Hello World
+<html>
+<head>
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-89745902-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+</head>
+<body>
+
+<script>
+function goUniverse(universe){
+  alert('Going to ' + universe)
+}
+</script>
+
+  Hello World
+  <div>
+    How would you like to search?
+    <form action="#">
+      <select name="engines" id="engines">
+        <option value="http://google.com">Google</option>
+        <option value="http://yahoo.com">Yahoo</option>
+        <option value="http://ya.ru">Yandex</option>
+      </select>
+      <p>
+      <input type="button" value="Go" onclick="goUniverse(this.form.engines[this.form.engines.selectedIndex].value)"/>
+      </p>
+    </form>
+  </div>
+</body>
+</html>
