--- a/index.html
+++ b/index.html
@@ -17,19 +17,28 @@
 function goUniverse(universe){
   alert('Going to ' + universe)
 }
+function sumbitEnabler(ind) {
+  if(ind > 0){
+    document.getElementById("submit").disabled=false
+  }
+  else {
+    document.getElementById("submit").disabled=true
+  }
+}
 </script>
 
   Hello World
   <div>
     How would you like to search?
     <form action="#">
-      <select name="engines" id="engines">
+      <select name="engines" id="engines" onchange="sumbitEnabler(this.selectedIndex)">
+        <option value="">Select: </option>
         <option value="http://google.com">Google</option>
         <option value="http://yahoo.com">Yahoo</option>
         <option value="http://ya.ru">Yandex</option>
       </select>
       <p>
-      <input type="button" value="Go" onclick="goUniverse(this.form.engines[this.form.engines.selectedIndex].value)"/>
+      <input type="button" id="submit" value="Go there" onclick="goUniverse(this.form.engines[this.form.engines.selectedIndex].value)" disabled="true"/>
       </p>
     </form>
   </div>
