--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-89745902-1', 'auto');
+  ga(function(){
+    console.log(ga.getAll());
+  });
   ga('send', 'pageview');
 
 </script>
