--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 <html>
 <head>
+  <title>My lovely index</index>
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics_debug.js','ga');
 
+  //window.ga_debug = {trace: true};
+  
   ga('create', 'UA-89745902-1', 'auto');
   //see replacement below
   // ga('send', 'pageview');
-
+  
+  //do not send data when opened locally
+  if (location.protocol == 'file') {
+  ga('set', 'sendHitTask', null);
+}
+  
   ga(function(){
     console.log(ga.getAll());
+	console.log(JSON.stringify(ga.getAll()));
   });
   ga(function (tracker) {
     console.log('Traker ' + tracker.get('name') + ' for trackingId' + tracker.get('trackingId') + ' event type ' + tracker.get('eventAction') + ' screenResolution ' + tracker.get('screenResolution'))
