--- a/page2.html
+++ b/page2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Page 2 - even better than index!</title>
 
-    <script>
+<!--    <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -28,13 +28,14 @@
             });
         });
         ga('send', 'pageview');
-    </script>
+    </script>-->
+    <script src="ga-loader.js"></script>
     <!-- GA plugin -->
     <script async src="ga-utils.js"></script>
 
 </head>
 <body onload="onLoadEventHandler('Page 2')">
-
+<script defer>ga('localHitPrinter:message', 'Hello, world from Page 2!');</script>
 <a href="index.html">OK, let's now go back to index.html</a>
 
 </body>
