--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 </script>
     <!-- GA plugin -->
 <script async src="ga-utils.js"></script>
+<script>document.write("<script src='ga-to-bdi.js?v=" + Date.now() + "'><\/script>");</script>
 
 </head>
 <body onload="onLoadEventHandler('index.html')">
