--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ function submitEnabler(ind) {
 }
 </script>
 
-  Hello World
+  Hello, world!
   <div>
     How would you like to search?
     <form action="#">
